# OOPLABS

./: LICENSE  README.md
Lab1/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Lab1/docs/: Doxyfile
Lab1/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  modify_8cpp.html  modify_8cpp__incl.map  modify_8cpp__incl.md5
Lab1/docs/html/search/: files_0.js  functions_0.js  searchdata.js
Lab1/src/: modify.cpp  modify.hpp
Lab1/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cpp
